# xhec-mlops-2025-project

./: .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docker.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb  notebook_1.ipynb
src/modelling/: deployment.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: encoder.pkl  model.pkl
